Fix summary info panel position in side-by-side mode
This was related to the nav panel, so was pushed off-screen to the left.
Now attached to the left rather than the right, so its position is now stable.

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@
 #mapcontainers.sidebyside #mapcontainer1 {float: right;}
 #mapcontainers.sidebyside .mapcontainer .activearea {right: 0;}
 #mapcontainers.sidebyside .mapcontainer .leaflet-control-layers, #mapcontainers.sidebyside .mapcontainer .leaflet-control-attribution {right: 0;}
-#mapcontainers.sidebyside .mapcontainer .summary {position: absolute; top: 0; right: 0; margin: 60px 320px 0 0; width: 157px;}
+#mapcontainers.sidebyside .mapcontainer .summary {left: 45px; top: 50px; width: 157px;}
 #mapcontainers.sidebyside .mapcontainer .geocoder input {width: 170px;}
 #mapcontainers.sidebyside nav {height: 170px; width: 310px;}
 #mapcontainers.sidebyside nav form {padding-top: 15px; padding-bottom: 15px;}
@@ -36,7 +36,8 @@ body .ui-front {z-index: 1000;}
 /* Overlay */
 nav {position: absolute; right: 0; width: 330px; height: 100%; z-index: 1000; background-color: #333; opacity: 0.85; color: white;}
 .activearea {position: absolute; top: 0; left: 0; right: 330px; height: 100%;}
-.leaflet-control-layers, .leaflet-control-attribution, .summary {right: 330px;}
+.leaflet-control-layers, .leaflet-control-attribution {right: 330px;}
+.leaflet-control.summary {position: absolute; left: 320px;}
 nav form {padding: 10px 10px 20px 15px;}
 nav form h3 {margin: 10px 0 2px;}
 nav form a {color: white; text-decoration: none;}
@@ -127,7 +128,7 @@ img.resource {padding: 2px; box-shadow: 4px 4px 25px #aaa; margin-bottom: 10px;}
 	#nav0 ul.rangelabels li {font-size: 65%;}
 	#nav0 label {width: 85%;}
 	.activearea {right: 0;}
-	.leaflet-control-layers, .leaflet-control-attribution, .summary {right: 0;}
+	.leaflet-control-layers, .leaflet-control-attribution {right: 0;}
 	.map .leaflet-popup {min-width: 200px; max-width: 90%; background-color: red;}
 	table#chart td:first-child {width: auto;}
 	
